fix contrast h1 contacts

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -168,6 +168,10 @@ nav a {
     color: white;
     font-size: larger;
 }
+
+.grid section h1{
+    color: black;
+}
 .grid section{
     max-width: 800px;
 }
